# kifla

./: Cargo.toml  README.md  build.rs
docs/: GUIDE.md
src/: app.rs  bluenoise.rs  color.rs  edit.rs  gpu.rs  main.rs  modifier.rs  operation.rs  pixel.rs  widgets.rs
src/edits/: black_white.rs  blend.rs  brightness_contrast.rs  channel_mixer.rs  color_balance.rs  crop.rs  curves.rs  exposure.rs  flip.rs  hue_saturation.rs  indexed_color.rs  invert.rs  levels.rs  make_seamless.rs  mod.rs  offset.rs  posterize.rs  repeat.rs  resize.rs  rotate.rs  selective_color.rs  shadows_highlights.rs  skew.rs  splat.rs  threshold.rs  vibrance.rs
src/modifiers/: black_white.rs  blend.rs  brightness_contrast.rs  channel_mixer.rs  color_balance.rs  color_normalization.rs  crop.rs  curves.rs  exposure.rs  flip.rs  hue_saturation.rs  indexed_color.rs  invert.rs  levels.rs  lighting.rs  mod.rs  offset.rs  posterize.rs  repeat.rs  resize.rs  rotate.rs  selective_color.rs  shadows_highlights.rs  skew.rs  threshold.rs  vibrance.rs
src/operations/: black_white.rs  brightness_contrast.rs  channel_mixer.rs  color_balance.rs  curves.rs  exposure.rs  flip.rs  hue_saturation.rs  indexed_color.rs  invert.rs  levels.rs  make_seamless.rs  mod.rs  offset.rs  posterize.rs  repeat.rs  resize.rs  rotate.rs  selective_color.rs  shadows_highlights.rs  splat.rs  threshold.rs  vibrance.rs
