[package]
name = "kifla"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
color_quant = "1"
eframe = { version = "0.26", features = ["wgpu"] }
egui = { version = "0.26", features = ["serde"] }
image = "0.24"
rayon = "1"
rfd = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
