[package]
name = "kifla"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
eframe = { version = "0.26", features = ["wgpu"] }
egui = { version = "0.26", features = ["serde"] }
image = "0.24"
rfd = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
